<resources>
    <string name="app_name">Guardian</string>
    <string name="home">Home</string>
    <string name="guard">Guard</string>
    <string name="map">Map</string>
    <string name="settings">Settings</string>
    <string name="server">Server</string>
    <string name="connected">Connected</string>
    <string name="disconnect">Disconnect</string>
    <string name="battery_car">Car battery</string>
    <string name="battery_drone">Drone battery</string>
    <string name="state">State</string>
    <string name="unknown">Unknown</string>
    <string name="config">Config</string>
    <string name="server_address">Server address</string>
    <string name="default_server_address" translatable="false">http://192.168.14.101:33307</string>
    <string name="default_rtmp_address" translatable="false">rtmp://192.168.14.101:33308/stream/court</string>
    <string name="rtmp_address">RTMP Address</string>
    <string name="video_decoder">Video decoder</string>
    <string name="fps">fps</string>
    <string name="video_cached">Video cached</string>
    <string name="audio_cached">Audio cached</string>
    <string name="seek_load_cost">Seek load cost</string>
    <string name="tcp_speed">TCP speed</string>
    <string name="bit_rate">Bit rate</string>
    <string name="court_camera">Court camera</string>
    <string name="live_map">Live map</string>
    <string name="car_camera">Car camera</string>
    <string name="default_rtmp_car_address" translatable="false">rtmp://192.168.14.101:33308/stream/car</string>
    <string name="rtmp_car_address">RTMP Car Address</string>
    <string name="run_state">Run state</string>
    <string name="refresh">Refresh</string>
    <string name="real_time_parameters">Real time parameters</string>
    <string name="manual_mode">Manual mode</string>
    <string name="not_bind">Not bind</string>
    <string name="please_bind_device">Please bind device</string>
    <string name="bound">Bound</string>
    <string name="bind">Bind</string>
    <string name="unbind">Unbind</string>
    <string name="edit">Edit</string>
    <string name="streaming_key">Streaming key</string>
    <string name="record_face">Record face</string>
    <string name="face_data">Face data</string>
    <string name="face_card_desc">Record or manage your photos here</string>
    <string name="object">Object</string>
    <string name="number">Number</string>
    <string name="manage">Manage</string>
    <string name="record">Record</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="pictures_management">Pictures management</string>
    <string name="delete">Delete</string>
    <string name="check">Check</string>
    <string name="edit_name">Edit name</string>
    <string name="please_wait">Please wait</string>
    <string name="upload_failed">Upload failed</string>
    <string name="tips">Tips</string>
    <string name="confirm_delete">Sure to delete?</string>
    <string name="qrcode_error">Wrong qrcode</string>
</resources>