<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:enabled="true"
        android:icon="@drawable/ic_outline_home"
        android:title="@string/home" />
    <item
        android:id="@+id/videoFragment"
        android:enabled="true"
        android:icon="@drawable/ic_outline_videocam"
        android:title="@string/guard" />
    <item
        android:id="@+id/mapFragment"
        android:enabled="true"
        android:icon="@drawable/ic_outline_map"
        android:title="@string/map" />
    <item
        android:id="@+id/settingsFragment"
        android:enabled="true"
        android:icon="@drawable/ic_outline_settings"
        android:title="@string/settings" />
</menu>