<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">
    <fragment
        android:id="@+id/homeFragment"
        android:name="com.xayah.guardian.fragment.home.HomeFragment"
        android:label="@string/app_name">
        <action
            android:id="@+id/action_homeFragment_to_settingsFragment"
            app:destination="@id/settingsFragment" />
        <action
            android:id="@+id/action_homeFragment_to_videoFragment"
            app:destination="@id/videoFragment" />
        <action
            android:id="@+id/action_homeFragment_to_mapFragment"
            app:destination="@id/mapFragment" />
    </fragment>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.xayah.guardian.fragment.settings.SettingsFragment"
        android:label="@string/settings" />
    <fragment
        android:id="@+id/videoFragment"
        android:name="com.xayah.guardian.fragment.video.VideoFragment"
        android:label="@string/guard" />
    <fragment
        android:id="@+id/mapFragment"
        android:name="com.xayah.guardian.fragment.map.MapFragment"
        android:label="@string/map" />
</navigation>