<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.xayah.guardian.fragment.home.HomeViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:animateLayoutChanges="true"
                android:orientation="vertical"
                android:paddingHorizontal="30dp"
                android:paddingBottom="30dp">

                <com.google.android.material.card.MaterialCardView
                    style="@style/Widget.Material3.CardView.Outlined"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:cardCornerRadius="24dp"
                    app:contentPadding="16dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/run_state"
                            android:textAppearance="@style/TextAppearance.Material3.TitleLarge" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:baselineAligned="false"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:orientation="horizontal">

                                <androidx.constraintlayout.utils.widget.ImageFilterView
                                    android:layout_width="48dp"
                                    android:layout_height="48dp"
                                    android:background="@color/redContainer"
                                    android:padding="8dp"
                                    android:tint="@color/red"
                                    app:roundPercent="0.5"
                                    app:srcCompat="@drawable/ic_round_database" />

                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="match_parent"
                                    android:layout_marginStart="8dp"
                                    android:gravity="center_vertical"
                                    android:orientation="vertical">

                                    <com.google.android.material.textview.MaterialTextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/server"
                                        android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                                        app:layout_constraintStart_toStartOf="parent"
                                        app:layout_constraintTop_toTopOf="parent" />

                                    <com.google.android.material.textview.MaterialTextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@{viewModel.server}"
                                        android:textAppearance="@style/TextAppearance.Material3.LabelMedium"
                                        app:layout_constraintStart_toStartOf="parent"
                                        app:layout_constraintTop_toTopOf="parent" />
                                </LinearLayout>

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:orientation="horizontal">

                                <androidx.constraintlayout.utils.widget.ImageFilterView
                                    android:layout_width="48dp"
                                    android:layout_height="48dp"
                                    android:background="@color/greenContainer"
                                    android:padding="8dp"
                                    android:tint="@color/green"
                                    app:roundPercent="0.5"
                                    app:srcCompat="@drawable/ic_round_navigation" />

                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="match_parent"
                                    android:layout_marginStart="8dp"
                                    android:gravity="center_vertical"
                                    android:orientation="vertical">

                                    <com.google.android.material.textview.MaterialTextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/state"
                                        android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                                        app:layout_constraintStart_toStartOf="parent"
                                        app:layout_constraintTop_toTopOf="parent" />

                                    <com.google.android.material.textview.MaterialTextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@{viewModel.state}"
                                        android:textAppearance="@style/TextAppearance.Material3.LabelMedium"
                                        app:layout_constraintStart_toStartOf="parent"
                                        app:layout_constraintTop_toTopOf="parent" />
                                </LinearLayout>

                            </LinearLayout>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:baselineAligned="false"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:orientation="horizontal">

                                <androidx.constraintlayout.utils.widget.ImageFilterView
                                    android:layout_width="48dp"
                                    android:layout_height="48dp"
                                    android:background="@color/yellowContainer"
                                    android:padding="8dp"
                                    android:src="@{viewModel.batteryCarIcon}"
                                    android:tint="@color/yellow"
                                    app:roundPercent="0.5" />

                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="match_parent"
                                    android:layout_marginStart="8dp"
                                    android:gravity="center_vertical"
                                    android:orientation="vertical">

                                    <com.google.android.material.textview.MaterialTextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/battery_car"
                                        android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                                        app:layout_constraintStart_toStartOf="parent"
                                        app:layout_constraintTop_toTopOf="parent" />

                                    <com.google.android.material.textview.MaterialTextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@{viewModel.batteryCar}"
                                        android:textAppearance="@style/TextAppearance.Material3.LabelMedium"
                                        app:layout_constraintStart_toStartOf="parent"
                                        app:layout_constraintTop_toTopOf="parent" />
                                </LinearLayout>

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:orientation="horizontal">

                                <androidx.constraintlayout.utils.widget.ImageFilterView
                                    android:layout_width="48dp"
                                    android:layout_height="48dp"
                                    android:background="@color/blueContainer"
                                    android:padding="8dp"
                                    android:src="@{viewModel.batteryDroneIcon}"
                                    android:tint="@color/blue"
                                    app:roundPercent="0.5" />

                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="match_parent"
                                    android:layout_marginStart="8dp"
                                    android:gravity="center_vertical"
                                    android:orientation="vertical">

                                    <com.google.android.material.textview.MaterialTextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/battery_drone"
                                        android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                                        app:layout_constraintStart_toStartOf="parent"
                                        app:layout_constraintTop_toTopOf="parent" />

                                    <com.google.android.material.textview.MaterialTextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@{viewModel.batteryDrone}"
                                        android:textAppearance="@style/TextAppearance.Material3.LabelMedium"
                                        app:layout_constraintStart_toStartOf="parent"
                                        app:layout_constraintTop_toTopOf="parent" />
                                </LinearLayout>

                            </LinearLayout>
                        </LinearLayout>

                        <com.google.android.material.button.MaterialButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:layout_marginTop="16dp"
                            android:text="@string/refresh" />

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>